# shagr

./: .gitignore  .htaccess  README.md  db.sqlite3  db.sqlite3_  links.json  links2.json  links3.json  main.py  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt  upload_images_by_json.py  upload_images_by_json2.py  upload_images_by_json3.py
apiapp/: serializers.py  urls.py  views.py
authapp/: _views.py  admin.py  core.py  forms.py  models.py  urls.py  views.py
authapp/migrations/: 0001_initial.py  0002_auto_20201213_0807.py  0003_auto_20201213_0815.py  0004_alter_buyer_id.py
authapp_/: urls.py
baseapp/: urls.py  views.py
cardapp/: urls.py  views.py
cartapp/: admin.py  core.py  models.py  urls.py  views.py
cartapp/migrations/: 0001_initial.py  0002_auto_20210104_0856.py  0003_auto_20211111_1624.py
catalog_app/: admin.py  apps.py  fetchers.py  models.py  serializers.py  urls.py  views.py
catalog_app/migrations/: 0001_initial.py  0002_catalog_seo_description_catalog_seo_keywords_and_more.py  0003_alter_catalog_category_alter_catalog_image_and_more.py  0004_rename_catalog_good.py  0007_alter_good_category.py  (+7 more)
catalogapp/: admin.py  core.py  groups.json  main.py  models.py  tests.py  urls.py  views.py
goodsapp/: admin.py  main.py  models.py  urls.py  views.py
index_app/: admin.py  apps.py  models.py  urls.py  views.py
orderapp/: admin.py  core.py  forms.py  models.py  urls.py  views.py
server/: settings.py  urls.py
shagr/: core.py  settings.py  urls.py  wsgi.py
wishlistapp/: admin.py  apps.py  core.py  models.py  urls.py  views.py
(+123 files in other folders)
